query alinhado com o swagger